# ChangeLog file for clients
# This file is updated with Maddlog
